fixed overflow problem

--- a/styles.scss
+++ b/styles.scss
@@ -3,6 +3,11 @@
 $main: #C3E900;
 $pink: #723414;
 
+
+html {
+    overflow: hidden;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -27,6 +32,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
 
 h1 {
